tests/fail/elaboration/unknown-field/unbound-head.snap
stdout = ''
stderr = '''
error: cannot find `rec` in scope
  ┌─ tests/fail/elaboration/unknown-field/unbound-head.fathom:3:1
  │
3 │ rec.foo.bar
  │ ^^^ unbound name

'''
